# PCat-Optimize

./: .gitignore  .gitmodules  CMakeLists.txt  Data.cpp  Data.h  FermiData.cpp  FermiData.h  FermiModel.cpp  FermiModel.h  FermiModelOptions.cpp  FermiModelOptions.h  Makefile  ModelOptions.cpp  ModelOptions.h  MyDistribution.cpp  MyDistribution.h  MyGaussianModel.cpp  MyGaussianModel.h  MyModel.cpp  MyModel.h  MyModelGlobals.h  MyOptions.cpp  MyOptions.h  MyRJObject.h  README.md  SloanData.cpp  SloanData.h  SloanModel.cpp  SloanModel.h  SloanModelGlobals.h  SloanModelOptions.cpp  SloanModelOptions.h  buildflags.in  main.cpp  postprocess.py
Data/: sdss.0921.base1_pix.txt  sdss.0921.base1_pix.txt.orig
run-sdss.0921.base1/: OPTIONS  OPTIONS-MODEL
